fixed static pages padding issue on small screens

--- a/landingpage.less
+++ b/landingpage.less
@@ -126,6 +126,10 @@
     padding-top: 100px;
     text-align: center;
 
+    @media(max-width: @screen-sm)  {
+      padding-top: 10px;
+    }
+
     h1 {
       font-size: 40px;
       .proxima-nova-light;
